k8s_fundamentals/day_3/06_networkpolicy/susan.yaml
apiVersion: v1
kind: Pod
metadata:
  name: susan
  labels:
    app: susan
spec:
  containers:
    - name: curl
      image: curlimages/curl:7.72.0
      command: ["sleep", "1h"]
