k8s_fundamentals/day_3/06_networkpolicy/networkpolicy-allow-susan.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-susan
spec:
  podSelector:
    matchLabels:
      app: bob
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: susan
